# tarefa7_comunicacao3_embarcatech

./: .gitignore  CMakeLists.txt  README.md
config/: credential_config_example.h  lwipopts.h  lwipopts_examples_common.h  mbedtls_config.h  mbedtls_config_examples_common.h
lib/ws2812b/: ws2812b.c  ws2812b.h
src/: main.c
